# mlx-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/basic_examples/: Cargo.toml
examples/basic_examples/src/: main.rs
mlx-derive/: Cargo.toml
mlx-derive/src/: lib.rs
mlx-ffi-trampoline/: Cargo.toml
mlx-model/: Cargo.toml
mlx-model/src/: lib.rs  phi2.rs
mlx-nn/: Cargo.toml
mlx-nn/src/: activations.rs  embedding.rs  layer_norm.rs  lib.rs  linear.rs  mlp.rs  rms_norm.rs
mlx-rust/: Cargo.toml
mlx-rust/src/: array.rs  array_op.rs  closure.rs  compile.rs  device.rs  fast.rs  from_array.rs  io.rs  lib.rs  module.rs  object.rs  random.rs  stream.rs  string.rs  to_array.rs  transform.rs  type.rs  vector_array.rs
mlx-rust/src/nn/: mod.rs
mlx-sys/: Cargo.toml  build.rs
src/: array.rs  array_op.rs  arry_op.rs  as_array.rs  device.rs  from_array.rs  lib.rs  object.rs  stream.rs  string.rs  to_array.rs  type.rs
