[package]
name = "mlx-ffi-trampoline"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
#syn = { version = "1.0", features = ["full"] }
paste = "1.0"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = {version =  "2.0.48", features = ["full"] }
deluxe = "0.5.0"
mlx-rust = { path = "../mlx-rust" }
