[package]
name = "mlx-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlx-nn = {workspace = true}
mlx-rust = {workspace = true}
mlx-derive = {workspace = true}
half = {workspace = true}
serde = { workspace = true, features = ["derive"] }
