[package]
name = "mlx-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
half = {workspace = true}
lazy_static = "1.4.0"
mlx-sys = { workspace = true}
paste = { workspace = true }
# ffi-trampoline = { path = "../ffi-trampoline" }
#
#
[dev-dependencies]
safetensors = { workspace = true }


# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build-dependencies]

# bindgen = "0.65.1"
# cmake = "0.1"
